--- a/login.html
+++ b/login.html
@@ -1,93 +1,160 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول - مستشفى دريم</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Cairo', sans-serif;
-            background: url('assets/images/operating-room.jpg') no-repeat center center fixed;
-            background-size: cover;
-        }
-        .fade-in { animation: fadeIn 1.2s ease-in-out; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px);} to { opacity: 1; transform: translateY(0);} }
-        .bg-overlay { background-color: rgba(255, 255, 255, 0.85); }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>تسجيل الدخول - مستشفى دريم</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Cairo', sans-serif;
+      background: url('assets/images/back.png') no-repeat center center fixed;
+      background-size: cover;
+    }
+
+    .fade-in { animation: fadeIn 1.2s ease-in-out; }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px);}
+      to { opacity: 1; transform: translateY(0);}
+    }
+
+    /* حركة الشعار */
+    .pulse-logo {
+      animation: pulseScale 3s infinite ease-in-out;
+    }
+    @keyframes pulseScale {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.15); }
+    }
+
+    /* ===== ألوان خاصة لغرفة العمليات ===== */
+    :root{
+      --ops-accent: #1e40af;                  /* أزرق طبي */
+      --ops-tint: rgba(236, 244, 251, 0.4);  /* خلفية شفافة */
+      --ops-tint-strong: rgba(236, 244, 251, 0.88);
+      --ops-border: rgba(30, 64, 175, 0.15);
+      --ops-focus: rgba(30, 64, 175, 0.12);
+      --ops-text: #0f172a;
+      --ops-placeholder: #64748b;
+    }
+
+    .bg-overlay{
+      background: var(--ops-tint);
+      backdrop-filter: blur(10px) saturate(115%);
+      -webkit-backdrop-filter: blur(10px) saturate(115%);
+      border: 1px solid var(--ops-border);
+    }
+
+    .input-ops{
+      background: rgba(255,255,255,0.20);
+      backdrop-filter: blur(8px) saturate(120%);
+      -webkit-backdrop-filter: blur(8px) saturate(120%);
+      border: 1px solid rgba(255,255,255,0.35);
+      color: var(--ops-text);
+    }
+
+    .input-ops::placeholder{
+      color: var(--ops-placeholder);
+      opacity: 0.95;
+    }
+
+    .input-ops:focus{
+      background: var(--ops-tint-strong);
+      border-color: var(--ops-border);
+      box-shadow: 0 0 0 4px var(--ops-focus);
+      outline: none;
+    }
+
+    .btn-ops{
+      background-color: var(--ops-accent);
+      color: #fff;
+    }
+    .btn-ops:hover{
+      filter: brightness(0.95);
+      transform: translateY(-1px);
+    }
+  </style>
 </head>
 <body class="min-h-screen flex items-center justify-center">
-    <div class="bg-overlay shadow-2xl rounded-2xl p-8 w-full max-w-md fade-in">
-        <div class="text-center mb-6">
-            <div class="mx-auto h-24 w-24 flex items-center justify-center rounded-full bg-blue-100 mb-4 animate-bounce">
-                <i class="fas fa-hospital text-4xl text-blue-600"></i>
-            </div>
-            <h1 class="text-3xl font-bold text-gray-900">مستشفى دريم</h1>
-            <p class="mt-1 text-lg text-blue-700 font-semibold">قسم العمليات</p>
-        </div>
-        <form id="loginForm" class="space-y-5">
-            <div>
-                <input id="username" name="username" type="text" placeholder="اسم المستخدم" required class="w-full px-4 py-3 border rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500 focus:outline-none">
-            </div>
-            <div class="relative">
-                <input id="password" name="password" type="password" placeholder="كلمة المرور" required class="w-full px-4 py-3 border rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500 focus:outline-none">
-                <button type="button" id="togglePassword" class="absolute inset-y-0 left-0 px-3 flex items-center text-gray-500 hover:text-blue-600">
-                    <i class="far fa-eye"></i>
-                </button>
-            </div>
-            <button type="submit" class="w-full py-3 bg-blue-600 text-white rounded-lg font-medium hover:bg-blue-700 transition-all duration-300 flex items-center justify-center">
-                <span id="loginText">تسجيل الدخول</span>
-                <svg id="loadingSpinner" class="hidden animate-spin ml-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
-                </svg>
-            </button>
-            <div id="loginError" class="hidden bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded-md text-sm"></div>
-        </form>
+  <div class="bg-overlay shadow-2xl rounded-2xl p-8 w-full max-w-md fade-in">
+    <div class="text-center mb-6">
+      <div class="mx-auto h-24 w-24 flex items-center justify-center rounded-full bg-blue-100 mb-4 pulse-logo">
+        <i class="fas fa-hospital text-4xl text-blue-600"></i>
+      </div>
+      <h1 class="text-3xl font-bold text-gray-900">مستشفى دريم</h1>
+      <p class="mt-1 text-lg text-blue-700 font-semibold">قسم العمليات</p>
     </div>
-    <script src="assets/js/config.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script>
-        const passwordField = document.getElementById('password');
-        document.getElementById('togglePassword').addEventListener('click', () => {
-            const type = passwordField.type === 'password' ? 'text' : 'password';
-            passwordField.type = type;
-        });
-        document.getElementById('loginForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const loginBtn = document.querySelector('button[type="submit"]');
-            const spinner = document.getElementById('loadingSpinner');
-            const loginText = document.getElementById('loginText');
-            spinner.classList.remove('hidden');
-            loginText.textContent = 'جارٍ التحقق...';
-            loginBtn.disabled = true;
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-            if (!window.AuthManager) {
-                showError('وحدة التحقق غير متوفرة.');
-                resetButton();
-                return;
-            }
-            const result = await AuthManager.login(username, password);
-            if (result.success) {
-                window.location.href = 'dashboard.html';
-            } else {
-                showError(result.message);
-                resetButton();
-            }
-        });
-        function showError(msg) {
-            const errorDiv = document.getElementById('loginError');
-            errorDiv.textContent = msg;
-            errorDiv.classList.remove('hidden');
-        }
-        function resetButton() {
-            document.getElementById('loadingSpinner').classList.add('hidden');
-            document.getElementById('loginText').textContent = 'تسجيل الدخول';
-            document.querySelector('button[type="submit"]').disabled = false;
-        }
-    </script>
+    <form id="loginForm" class="space-y-5">
+      <div>
+        <input id="username" name="username" type="text" placeholder="اسم المستخدم" required
+          class="w-full px-4 py-3 rounded-lg shadow-sm input-ops focus:ring-2 focus:ring-blue-500 focus:outline-none">
+      </div>
+      <div class="relative">
+        <input id="password" name="password" type="password" placeholder="كلمة المرور" required
+          class="w-full px-4 py-3 rounded-lg shadow-sm input-ops focus:ring-2 focus:ring-blue-500 focus:outline-none">
+        <button type="button" id="togglePassword" class="absolute inset-y-0 left-0 px-3 flex items-center text-gray-500 hover:text-blue-600">
+          <i class="far fa-eye"></i>
+        </button>
+      </div>
+      <button type="submit"
+        class="w-full py-3 rounded-lg font-medium btn-ops transition-all duration-300 flex items-center justify-center">
+        <span id="loginText">تسجيل الدخول</span>
+        <svg id="loadingSpinner" class="hidden animate-spin ml-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+          <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
+        </svg>
+      </button>
+      <div id="loginError" class="hidden bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded-md text-sm"></div>
+    </form>
+  </div>
+
+  <script src="assets/js/config.js"></script>
+  <script src="assets/js/auth.js"></script>
+  <script>
+    const passwordField = document.getElementById('password');
+    document.getElementById('togglePassword').addEventListener('click', () => {
+      const type = passwordField.type === 'password' ? 'text' : 'password';
+      passwordField.type = type;
+    });
+
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const loginBtn = document.querySelector('button[type="submit"]');
+      const spinner = document.getElementById('loadingSpinner');
+      const loginText = document.getElementById('loginText');
+      spinner.classList.remove('hidden');
+      loginText.textContent = 'جارٍ التحقق...';
+      loginBtn.disabled = true;
+
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+
+      if (!window.AuthManager) {
+        showError('وحدة التحقق غير متوفرة.');
+        resetButton();
+        return;
+      }
+      const result = await AuthManager.login(username, password);
+      if (result.success) {
+        window.location.href = 'dashboard.html';
+      } else {
+        showError(result.message);
+        resetButton();
+      }
+    });
+
+    function showError(msg) {
+      const errorDiv = document.getElementById('loginError');
+      errorDiv.textContent = msg;
+      errorDiv.classList.remove('hidden');
+    }
+    function resetButton() {
+      document.getElementById('loadingSpinner').classList.add('hidden');
+      document.getElementById('loginText').textContent = 'تسجيل الدخول';
+      document.querySelector('button[type="submit"]').disabled = false;
+    }
+  </script>
 </body>
 </html>
