--- a/daily-data.html
+++ b/daily-data.html
@@ -183,7 +183,7 @@
     <script>
         // Check authentication
         if (!AuthManager.isAuthenticated()) {
-            window.location.href = 'login.html';
+            window.location.href = 'index.html';
         }
 
         // Set today's date as default
