--- a/data-entry.html
+++ b/data-entry.html
@@ -184,7 +184,7 @@
     <script>
         // Check authentication
         if (!AuthManager.isAuthenticated()) {
-            window.location.href = 'login.html';
+            window.location.href = 'index.html';
         }
 
         document.getElementById('operationForm').addEventListener('submit', async (e) => {
