--- a/gallery.html
+++ b/gallery.html
@@ -138,7 +138,7 @@
     <script>
         // Check authentication
         if (!AuthManager.isAuthenticated()) {
-            window.location.href = 'login.html';
+            window.location.href = 'index.html';
         }
 
         let currentImageId = null;
