--- a/analysis.html
+++ b/analysis.html
@@ -179,7 +179,7 @@
     <script>
         // Check authentication
         if (!AuthManager.isAuthenticated()) {
-            window.location.href = 'login.html';
+            window.location.href = 'index.html';
         }
 
         let charts = {};
