--- a/dashboard.html
+++ b/dashboard.html
@@ -116,7 +116,7 @@
     <script>
         // Check authentication
         if (!AuthManager.isAuthenticated()) {
-            window.location.href = 'login.html';
+            window.location.href = 'index.html';
         }
     </script>
 </body>
